@@ -4,10 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 public class ChallengeTest {
 
@@ -15,7 +12,7 @@ public class ChallengeTest {
     public void testChallengeClass() {
         // Init data
         Example example = Example.builder()
-                .idExample("d07008df-39ef-4c96-83aa-0ce0e25ed4c4")
+                .idExample(UUID.fromString("d07008df-39ef-4c96-83aa-0ce0e25ed4c4"))
                 .exampleText("Example Text Test")
                 .build();
         Detail detail = Detail.builder()
@@ -23,16 +20,15 @@ public class ChallengeTest {
                 .description("Test Description")
                 .note("Test note")
                 .build();
-        String uuid = "123456";
+        UUID uuid = UUID.randomUUID();
         String level = "Intermediate";
         String title = "Java Challenge";
-        Set<String> languages = new HashSet<>(Arrays.asList("Java", "Python"));
+        Set<String> languages = Set.of("4");
         LocalDate creationDate = LocalDate.now();
 
-        List<String> solutions = Arrays.asList("Solution 1", "Solution 2");
-        Set<String> related = new HashSet<>(Arrays.asList("Related 1", "Related 2"));
-        Set<String> resources = new HashSet<>(Arrays.asList("Resource 1", "Resource 2"));
-        Set<String> tags = new HashSet<>(Arrays.asList("Tag 1", "Tag 2"));
+        List<UUID> solutions = List.of(UUID.randomUUID());
+        Set<UUID> resources = Set.of(UUID.randomUUID());
+
 
         // Act
         Challenge challenge = Challenge.builder()
@@ -43,9 +39,7 @@ public class ChallengeTest {
                 .creationDate(creationDate)
                 .detail(detail)
                 .solutions(solutions)
-                .related(related)
                 .resources(resources)
-                .tags(tags)
                 .build();
 
         // Assert
@@ -56,9 +50,7 @@ public class ChallengeTest {
         Assertions.assertEquals(creationDate, challenge.getCreationDate());
         Assertions.assertEquals(detail, challenge.getDetail());
         Assertions.assertEquals(solutions, challenge.getSolutions());
-        Assertions.assertEquals(related, challenge.getRelated());
         Assertions.assertEquals(resources, challenge.getResources());
-        Assertions.assertEquals(tags, challenge.getTags());
     }
 
 }
